overflow issue fixed

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -267,9 +267,10 @@
         opacity: 0.95;
         position: fixed;
         top: 0;
-        right: -500px;
+        right: -100%;
         z-index: 2;
         transition: right 500ms ease;
+        overflow: hidden;
 
         .navList {
 
